<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DoItEveryWhere</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_who_to_follow">WhoToFollowActivity</string>
    <string name="title_activity_test__aymen_2">Test_Aymen_2</string>
    <string name="Sign_In_Google_Plus">Sign in with google plus</string>
    <string name="Sign_In_Facebook">Sign in with facebook</string>
    <string name="loading_text">Initialisation...</string>
    <string name="connection_text">Connection...</string>
    <string name="View_Profile_text">View Profile</string>
    <string name="Nearby_text">Nearby</string>
    <string name="To_Do_text">To do</string>
    <string name="In_Progress_text">In progress</string>
    <string name="Done_text">Done</string>
    <string name="Profile_text">Profile</string>
    <string name="Settings_text">Settings</string>
    <string name="Stream_text">Stream</string>
    <string name="Profile_title">My Profile</string>
    <string name="Interested_text">Interested</string>
    <string name="Explore_text">Explore</string>
    <string name="Following_text">Following</string>
    <string name="Followers_number"> Followers</string>
    <string name="Suggestion_Text"> Suggestions</string>
    <string name="Categorie_Text"> Categories</string>
    <string name="Suggestion_Text"> Suggestion</string>
    <string name="Details_Text"> Details</string>
    <string name="Posts_Text"> Posts</string>
    <string name="Follow"> Follow</string>
    <string name="Follower_Text"> Followers</string>
    <string name="Followers"> Followers</string>
     <string name="Logout_Text"> Log Out</string>
    
    
    <!-- Content Description -->
    <string name="profile"> profile</string>
    

    <!--  -->
    <string name="change_locale">Change Locale</string>
    <string name="list_moments_title">Touch a moment to delete</string>
    <string name="send_interactive_button_name">Send Interactive Post</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke access</string>
    <string name="share_title">Prefill Text (optional)</string>
    <string name="share_prefill_text">Welcome to the Google+ platform.</string>
    <string name="default_status" />
    <string name="greeting_status">Welcome, %s.</string>
    <string name="greeting_status_sign_in_required">Sign-in required</string>
    <string name="greeting_status_error">Error signing in: %s.</string>
    <string name="loading_status">Loading…</string>
    <string name="signing_in_status">Signing in with Google+.</string>
    <string name="signed_in_status">Signed in as \"%s\".</string>

    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="signed_out_status">Signed out.</string>
    <string name="revoke_access_status">Revoked access.</string>
    <string name="revoke_access_error_status">Unable to revoke access.</string>
    <string name="plus_write_moment_status">Saving moment</string>
    <string name="plus_remove_moment_status">Removing moment</string>
    <string name="plus_one_small_name">Small +1 button</string>
    <string name="plus_one_medium_name">Medium +1 button</string>
    <string name="plus_one_tall_name">Tall +1 button</string>
    <string name="plus_one_standard_name">Standard +1 button</string>
    <string name="plus_one_standard_ann_name">Standard +1 button (with inline annotation)</string>
    <string name="plus_example_deep_link_id">/+/mobile/android/</string>
    <string name="plus_example_deep_link_url">        https://developers.google.com/+/mobile/android/</string>
    <string name="plus_generic_error">Sign in with Google is not available.</string>
    <string name="progress_message">Signing in to Google&#8230;</string>
    <string name="empty_string"></string>
    <string name="first_title">Sliding menu from XML</string>
    <string name="second_title">Do It Everywhere</string>
    <string name="contact_email">andrius.baruckis@gmail.com</string>
    <string name="contact_email_subject">Sliding Menu Implementation Example feedback</string>
    <string name="source_code_repository_link">https://github.com/baruckis/Android-SlidingMenuImplementation</string>
    <string name="tutorial_title">SLIDING MENU IMPLEMENTATION EXAMPLE</string>
    <string name="first_frame_title_label">SLIDING MENU FROM XML</string>
    <string name="first_frame_subtitle_label">Menu content is a list fragment filled with data loaded from XML file.</string>
    <string name="second_frame_title_label">SLIDING MENU FROM CLASS</string>
    <string name="second_frame_subtitle_label">Menu content is a list fragment filled with data loaded from a class.</string>
    <string name="textview_top_left_label_for_xml">Press on the up icon to hide sliding out menu if it is visible, or to go back to previuos screen.</string>
    <string name="textview_left_label_for_xml">Swipe with the finger to slide out menu from the left side.</string>
    <string name="textview_top_left_label_for_class">Press on the icon to show or hide sliding out menu.</string>
    <string name="textview_left_label_for_class">Swipe with the finger to slide out menu from the left side.</string>
    <string name="empty_string"></string>

    <!-- MENU -->
    <string name="menu_github_short">GitHub</string>
    <string name="menu_github_long">Source on GitHub</string>
    <string name="menu_about_short">About</string>
    <string name="menu_about_long">About this app</string>
    <string name="menu_contact_short">Contact</string>
    <string name="menu_contact_long">Contact developer</string>

    <!-- DIALOGS -->
    <string name="dialog_about_title">"About"</string>
    <string name="dialog_about_message">&lt;b>Sliding Menu Implementation Example&lt;/b> is an example app,
        which shows how to do implementation of an Android library SlidingMenu developed by Jeremy Feinstein. It has two different approaches.
        First one demonstrates left side sliding out menu with a list fragment, as a content, filled with data loaded from XML file.
        Second one demonstrates left side sliding out menu with a list fragment, as a content, filled with data loaded from a class.
        
        &lt;br>&lt;br>
        SlidingMenu Android library can be found at GitHub at &lt;a href="https://github.com/jfeinstein10/SlidingMenu">https://github.com/jfeinstein10/SlidingMenu&lt;/a>.
        &lt;br>
        Free icons used in this app are taken from &lt;a href="http://www.androidicons.com">http://www.androidicons.com&lt;/a>.
        
        &lt;br>&lt;br>
		Please feel free to grab the source of this app at the GitHub by pressing little octocat icon in the ActionBar
		and use it anywhere you want at your Android projects.
		I hope you will find it clear and useful! 
		
		&lt;br>&lt;br>
		Author,
		&lt;br>
		&lt;b>Andrius Baruckis&lt;/b>
		&lt;br>
		&lt;a href="http://www.baruckis.com">http://www.baruckis.com&lt;/a></string>
    <string name="dialog_about_button_text">"Close"</string>
    <string name="dialog_list_item_click_button_text">"OK"</string>

    <!-- TOASTS -->
    <string name="toast_contact_no_email">"Sorry, we could not find any e-mail apps on your device. Please install first and try again."</string>
    <string name="toast_unsupported_encoding">"Sorry, your device does not support UTF-8 encoding."</string>
    <string name="toast_sliding_menu_toggle">"Sliding menu toggled!"</string>
    <string name="toast_sliding_menu_custom_action">"This could call custom action!"</string>
    <string name="toast_sliding_menu_no_action_default">"No action by default."</string>

</resources>