<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.audamob.doit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".AuthenticationActivity" >

    <RelativeLayout
        android:id="@+id/Login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" >

        <RelativeLayout
            android:id="@+id/FB_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/fb_bg" >

            <ImageView
                android:id="@+id/fb_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/fb_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/fb_id"
                android:text="@string/Sign_In_Facebook"
                android:textColor="#ffffff"
                android:textSize="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/GP_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/FB_Login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/google_plus_bg_selector"
            android:visibility="visible" >

            <ImageView
                android:id="@+id/gp_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/gp_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/gp_id"
                android:text="@string/Sign_In_Google_Plus"
                android:textColor="#ffffff"
                android:textSize="15dp" >
            </TextView>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Progress_Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/roundedcorner" >

        <de.passsy.holocircularprogressbar.HoloCircularProgressBar
            android:id="@+id/progressBar_loading"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:marker_progress="0.0"
            app:marker_visible="false"
            app:progress="0.0"
            app:progress_background_color="#cccccc"
            app:progress_color="@android:color/holo_orange_dark"
            app:stroke_width="8dp"
            app:thumb_visible="false" />

        <TextView
            android:id="@+id/text_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar_loading"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/loading_text"
            android:textColor="#444444"
            android:textSize="15dp" />
    </RelativeLayout>

</RelativeLayout>