<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blurred_3" >

    <ScrollView
        android:id="@+id/CustomList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/MenuHeaderLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:layout_marginTop="70dp" >

                <RelativeLayout
                    android:id="@+id/profile_image_shadow"
                    android:layout_width="@dimen/sliding_menu_profile_picture_shadow_height_3"
                    android:layout_height="@dimen/sliding_menu_profile_picture_shadow_height_3"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/custom_shape_3" >

                    <RelativeLayout
                        android:layout_width="@dimen/sliding_menu_profile_picture_shadow_height_2"
                        android:layout_height="@dimen/sliding_menu_profile_picture_shadow_height_2"
                        android:layout_centerInParent="true"
                        android:background="@drawable/custom_shape_2" >

                        <RelativeLayout
                            android:layout_width="@dimen/sliding_menu_profile_picture_shadow_height_1"
                            android:layout_height="@dimen/sliding_menu_profile_picture_shadow_height_1"
                            android:layout_centerInParent="true"
                            android:background="@drawable/custom_shape_1" >

                            <RelativeLayout
                                android:layout_width="@dimen/sliding_menu_profile_picture_shadow_height"
                                android:layout_height="@dimen/sliding_menu_profile_picture_shadow_height"
                                android:layout_centerInParent="true"
                                android:background="@drawable/custom_shape" >

                                <ImageView
                                    android:id="@+id/profile_image"
                                    android:layout_width="@dimen/sliding_menu_profile_picture_height"
                                    android:layout_height="@dimen/sliding_menu_profile_picture_height"
                                    android:layout_centerInParent="true"
                                    android:contentDescription="@string/profile"
                                    android:scaleType="centerCrop" />
                            </RelativeLayout>
                        </RelativeLayout>
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile_image_shadow"
                    android:layout_centerHorizontal="true"
                    android:text="Profile Name"
                    android:textColor="@color/flat_clouds"
                    android:textSize="@dimen/sliding_menu_profile_name_height" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ItemMenu_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sliding_menu_item_height"
                android:layout_below="@+id/MenuHeaderLayout"
                android:background="@drawable/item_sliding_menu_bg_selector" >

                <RelativeLayout
                    android:id="@+id/selector_1"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/bg_opacity"
                    android:visibility="invisible" >
                </RelativeLayout>

                <ImageView
                    android:id="@+id/row_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_stream" />

                <TextView
                    android:id="@+id/row_title_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/row_icon"
                    android:text="@string/Stream_text"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/sliding_menu_item_title_height" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/divider_bg" >
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ItemMenu_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sliding_menu_item_height"
                android:layout_below="@+id/ItemMenu_1"
                android:background="@drawable/item_sliding_menu_bg_selector" >

                <RelativeLayout
                    android:id="@+id/selector_2"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/bg_opacity"
                    android:visibility="invisible" >
                </RelativeLayout>

                <ImageView
                    android:id="@+id/row_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_nearby" />

                <TextView
                    android:id="@+id/row_title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/row_icon"
                    android:text="@string/Nearby_text"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/sliding_menu_item_title_height" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/divider_bg" >
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ItemMenu_3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sliding_menu_item_height"
                android:layout_below="@+id/ItemMenu_2"
                android:background="@drawable/item_sliding_menu_bg_selector" >

                <RelativeLayout
                    android:id="@+id/selector_3"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/bg_opacity"
                    android:visibility="invisible" >
                </RelativeLayout>

                <ImageView
                    android:id="@+id/row_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_interested" />

                <TextView
                    android:id="@+id/row_title_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/row_icon"
                    android:text="@string/Interested_text"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/sliding_menu_item_title_height" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/divider_bg" >
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ItemMenu_4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sliding_menu_item_height"
                android:layout_below="@+id/ItemMenu_3"
                android:background="@drawable/item_sliding_menu_bg_selector" >

                <RelativeLayout
                    android:id="@+id/selector_4"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/bg_opacity"
                    android:visibility="visible" >
                </RelativeLayout>

                <ImageView
                    android:id="@+id/row_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_explore" />

                <TextView
                    android:id="@+id/row_title_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/row_icon"
                    android:text="@string/Explore_text"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/sliding_menu_item_title_height" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/divider_bg" >
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ItemMenu_5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sliding_menu_item_height"
                android:layout_below="@+id/ItemMenu_4"
                android:background="@drawable/item_sliding_menu_bg_selector" >

                <RelativeLayout
                    android:id="@+id/selector_5"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/bg_opacity"
                    android:visibility="invisible" >
                </RelativeLayout>

                <ImageView
                    android:id="@+id/row_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_settings" />

                <TextView
                    android:id="@+id/row_title_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/row_icon"
                    android:text="@string/Settings_text"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/sliding_menu_item_title_height" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/divider_bg" >
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ItemMenu_6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sliding_menu_item_height"
                android:layout_below="@+id/ItemMenu_5"
                android:background="@drawable/item_sliding_menu_bg_selector" >

                <RelativeLayout
                    android:id="@+id/selector_6"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/bg_opacity"
                    android:visibility="invisible" >
                </RelativeLayout>

                <ImageView
                    android:id="@+id/row_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:id="@+id/row_title_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/row_icon"
                    android:text="@string/Logout_Text"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/sliding_menu_item_title_height" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/divider_bg" >
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/CustomList"
        android:divider="@drawable/divider_bg"
        android:dividerHeight="1dip"
        android:scrollbars="none" />

</RelativeLayout>